# Open-Agent-Auth

./: .gitignore  BLOCKCHAIN_INTEGRATION.md  README.md  pyproject.toml
contracts/: CARegistry.sol
examples/: basic_example.py  blockchain_example.py  crl_example.py  fastapi_example.py  ocsp_example.py
src/open_agent_auth/: __init__.py
src/open_agent_auth/agent/: __init__.py  signer.py
src/open_agent_auth/core/: __init__.py  crypto.py  errors.py  http_sig.py  models.py
src/open_agent_auth/integrations/: fastapi.py
src/open_agent_auth/issuer/: __init__.py  crl.py  ocsp.py
src/open_agent_auth/trust/: __init__.py  blockchain.py  crl.py  mock_contract.py  ocsp.py  store.py
src/open_agent_auth/validator/: __init__.py  chain.py  verifier.py
tests/: test_blockchain.py  test_crl.py  test_end_to_end.py  test_fastapi.py  test_ocsp.py
