[project]
name = "open-agent-auth"
version = "0.1.0"
description = "Decentralized agent authentication for agentic commerce using Web Bot Auth protocol"
readme = "README.md"
authors = [
    { name = "Lawrence Godfrey", email = "lawrencegodfrey58@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["agent", "authentication", "commerce", "web-bot-auth", "cryptography", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=46.0.3",
    "http-message-signatures>=1.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "structlog>=25.4.0",
    "web3>=7.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
